# TO-DO-APP

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/todoapp/: MainActivity.kt  ToDoApplication.kt
app/src/main/java/com/example/todoapp/data/: AppContainer.kt
app/src/main/java/com/example/todoapp/data/local/: AppDatabase.kt  AssistantMemoryDao.kt  AssistantMemoryEntity.kt  DailyProgressDao.kt  DailyProgressEntity.kt  GoalDao.kt  GoalEntity.kt  PhoneUsageDao.kt  PhoneUsageEntity.kt  SettingsDataStore.kt  TaskDao.kt  TaskEntity.kt  TimerSessionDao.kt  TimerSessionEntity.kt
app/src/main/java/com/example/todoapp/data/model/: ChatMessage.kt  OpenRouterModels.kt
app/src/main/java/com/example/todoapp/data/remote/: AiConfig.kt  AiRepository.kt  AiService.kt  OpenRouterService.kt
app/src/main/java/com/example/todoapp/data/repository/: AssistantMemoryRepository.kt  DailyProgressRepository.kt  GoalRepository.kt  PhoneUsageRepository.kt  TaskRepository.kt  TimerSessionRepository.kt
app/src/main/java/com/example/todoapp/llm/: DeterministicParser.kt  JsonResponseParser.kt  LlamaInference.kt  LlamaNative.kt  LocalAssistantRepository.kt  ModelManager.kt  PromptTemplates.kt
app/src/main/java/com/example/todoapp/ui/: AppViewModelProvider.kt
app/src/main/java/com/example/todoapp/ui/components/: BottomNavigationBar.kt
app/src/main/java/com/example/todoapp/ui/navigation/: Navigation.kt  Screen.kt
app/src/main/java/com/example/todoapp/util/: ActivityHeatmapGenerator.kt  AiAnalyticsEngine.kt  AnalyticsUtils.kt  GoalProjectionEngine.kt  MotivationalQuotes.kt  ProgressCalculator.kt
app/src/main/java/com/example/todoapp/worker/: MissedStudyWorker.kt  PhoneUsageWorker.kt
app/src/main/jniLibs/arm64-v8a/: README.md
app/src/main/jniLibs/armeabi-v7a/: README.md
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/com/example/todoapp/llm/: DeterministicParserTest.kt  JsonResponseParserTest.kt
(+31 files in other folders)
